--- a/Src/Service/Catalog/Catalog.API/appsettings.json
+++ b/Src/Service/Catalog/Catalog.API/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "DataBaseSetting": {
+    "connectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ProductDb",
+    "ColloectionName":  "Products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
